force-app/main/default/objects/Site_Score__c/Site_Score__c.object-meta.xml
<CustomObject>
    <description>Detailed scoring breakdown for each expansion site, generated by the Agentforce Store Expansion Agent</description>
    <label>Site Score</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Score Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>