force-app/main/default/objects/Site_Score__c/fields/Demand_Factor__c.field-meta.xml
<CustomField>
    <fullName>Demand_Factor__c</fullName>
    <label>Demand Factor (0-25)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>