force-app/main/default/objects/Site_Score__c/fields/Scored_By__c.field-meta.xml
<CustomField>
    <fullName>Scored_By__c</fullName>
    <label>Scored By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>