force-app/main/default/objects/Site_Score__c/fields/Scoring_Date__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Date__c</fullName>
    <label>Scoring Date</label>
    <type>Date</type>
</CustomField>