force-app/main/default/objects/Site_Score__c/fields/Scoring_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Notes__c</fullName>
    <label>Scoring Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>