force-app/main/default/objects/Site_Score__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <formula>Demand_Factor__c + Demographics_Factor__c + Competition_Factor__c + Accessibility_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score (0-100)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>